--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -32,7 +32,7 @@
 	font-weight: bold;
 	font-size: 18px;
 }
-/** Setup Classes **/	
+/** Setup Classes **/
 
 /** Examples CSS **/
 /** Perfect Center **/
@@ -67,6 +67,7 @@
 	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
 	/* Define how remaining space is distributed */
+	-webkit-justify-content: space-around;
 	justify-content: space-around;
 }
 
@@ -93,7 +94,7 @@
 	display: flex;
 	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
-
+	-webkit-justify-content: flex-end;
 	justify-content: flex-end;
 }
 
@@ -110,6 +111,7 @@
 
 @media all and (max-width: 800px) {
   .navigation {
+		-webkit-justify-content: space-around;
     justify-content: space-around;
   }
 }
@@ -120,15 +122,15 @@
     flex-flow: column wrap;
     padding: 0;
   }
-  
-  .navigation a { 
-    text-align: center; 
+
+  .navigation a {
+    text-align: center;
     padding: 10px;
-    border-top: 1px solid rgba(255,255,255,0.3); 
-    border-bottom: 1px solid rgba(0,0,0,0.1); 
+    border-top: 1px solid rgba(255,255,255,0.3);
+    border-bottom: 1px solid rgba(0,0,0,0.1);
   }
 
-  
+
   .navigation li:last-of-type a {
     border-bottom: none;
   }
@@ -136,13 +138,16 @@
 /** Navigation Example **/
 /** Panel Example **/
 .wrapper {
+	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
 	text-align: center;
 	font-weight: bold;
+	display: -webkit-flex;
 	display: flex;
 }
 .wrapper > * {
 	padding: 10px;
+	-webkit-flex: 1 100%;
 	flex: 1 100%;
 }
 .header {
@@ -162,14 +167,32 @@
 	background: hotpink;
 }
 @media all and (min-width: 600px) {
-	.aside { flex: 1 auto; }
+	.aside {
+		-webkit-flex: 1 auto;
+		flex: 1 auto;
+	}
 }
 @media all and (min-width: 800px) {
-	.main { flex: 3 0px; }
-	.aside-1 { order: 1; }
-	.main 	 { order: 2; }
-	.aside-2 { order: 3; }
-	.footer  { order: 4; }
+	.main {
+		-webkit-flex: 3 0px;
+		flex: 3 0px;
+	}
+	.aside-1 {
+		-webkit-order: 1;
+		order: 1;
+	}
+	.main 	 {
+		-webkit-order: 2;
+		order: 2;
+	}
+	.aside-2 {
+		-webkit-order: 3;
+		order: 3;
+	}
+	.footer  {
+		-webkit-order: 4;
+		order: 4;
+	}
 }
 /** Panel Example **/
 /** Examples CSS **/
